--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "and": "^0.0.3",
     "axios": "^1.1.3",
+    "cores": "^0.8.5",
     "express": "^4.18.2",
     "querystring": "^0.2.1",
     "swagger-autogen": "^2.22.0",
